# cline-llm-methodology

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  mkdocs.yml  pyproject.toml  pytest.ini
.github/workflows/: ci.yml
docs/: index.md
docs/getting-started/: configuration.md  installation.md  quick-start.md
docs/methodology/: llm_methodology.md  project_initialization.md  tavily_integration.md  tools_integration.md
scripts/: migrate_from_api_h2h.py  setup.sh
src/llm_setup/: __init__.py  cli.py  setup.py
tests/: conftest.py
tests/unit/: test_cli.py  test_setup.py
